[project]
name = "flask-project"
version = "0.1.0"
description = "Small bank API for python"
authors = [
    {name = "Lirovsk",email = "araujojv04@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "sqlalchemy (>=2.0.49,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
